--- a/STARTUP-WEBSITE/index.html
+++ b/STARTUP-WEBSITE/index.html
@@ -14,13 +14,13 @@
             <header class="header">
                 <div class="logo">
                     <img class="logo__image" src="img/Icon.png" alt="logo">
-                    <div class="logo__text">
+                    <div class="logo__text ">
                         <div class="logo__name">Foundation</div>
                         <div class="logo__description">Startup landing template</div>
                     </div>
                 </div>
                 <nav class="navigation">
-                    <a href="#" class="navigation__item navigation__item_selected">Home</a>
+                    <a href="#"class="navigation__item navigation__item_selected">Home</a>
                     <a href="#" class="navigation__item">Stories</a>
                     <a href="#" class="navigation__item">Library<i class="navigation__arrow"></i></a>
                 </nav>
@@ -33,14 +33,37 @@
                 <div class="about-company">
                     <div class="logo">
                         <img class="logo__image" src="img/Icon-dark.png" alt="logo">
-                        <div class="logo__text">
+                        <div class="logo__text ">
                             <div class="logo__name">Foundation</div>
                             <div class="logo__description">Startup landing template</div>
                         </div>
                     </div>
+                    <p class="footer__description">Foundation is a website template for startups and small teams. It helps to build a website in no time.</p>
                 </div>
-                <div class="addditional-navigation">
-
+                <div class="downloads">
+                    <img class="downloads__item" src="img/app-store.png" alt="Apple Store Download">
+                    <img src="img/google-play.png" alt="Google Play Download">
+                </div>
+                <div class="additional-navigation">
+                    <div class="additional-navigation__column nav-links">
+                        <h3 class="nav-links__title">Product</h3>
+                        <ul class="nav-links__list">
+                            <li class="nav-links__list-item">Acquire Users</li>
+                            <li class="nav-links__list-item">Content Marketing</li>
+                            <li class="nav-links__list-item">Website Templates </li>
+                            <li class="nav-links__list-item">Customer Management</li>
+                            <li class="nav-links__list-item">Virtual Inbox</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="additional-navigation__column nav-links">
+                    <h3 class="nav-links__title">Company</h3>
+                    <ul class="nav-links__list">
+                        <li class="nav-links__list-item">About Foundation</li>  
+                        <li class="nav-links__list-item">Brand Guidelines</li>
+                        <li class="nav-links__list-item">Press Kit</li>
+                        <li class="nav-links__list-item">Support</li>
+                    </ul>
                 </div>
             </div>
             <div class="footer__line"></div>
@@ -50,11 +73,10 @@
                     <a href="#" class="terms__items">Privacy</a>
                     <a href="#" class="terms__items">Licence</a>
                 </nav>
-                <div class="footer__line"></div>
                 <div class="social-links">
-                    <a class="social-links__item" href="https://twitter.com" target="_blank"><img src="img/social-twitter.png" alt="Twitter Link"></a>
-                    <a class="social-links__item" href="https://twitter.com" target="_blank"><img src="img/social-fb.png" alt="Facebook Link"></a>
-                    <a class="social-links__item" href="https://twitter.com" target="_blank"><img src="img/social-LinkedIn.png" alt="LinkedIn Link"></a>
+                   <a class="social-links__item" href="https://twitter.com" target="_blank"><img src="img/social-twitter.png" alt="Twitter Link"></a>
+                   <a class="social-links__item" href="https://twitter.com" target="_blank"><img src="img/social-fb.png" alt="Facebook Link"></a>
+                   <a class="social-links__item" href="https://twitter.com" target="_blank"><img src="img/social-LinkedIn.png" alt="LinkedIn Link"></a>
                 </div>
             </div>
         </footer>
